--- a/搜索技术培训材料.md
+++ b/搜索技术培训材料.md
@@ -12,48 +12,51 @@
 
 ### **1. 预处理阶段**
 - **输入过滤**：去除禁用词、特殊字符、拼音识别
-  - *示例*：`"apple苹果手机！！！"` → `"apple苹果手机"`
+  - *示例*：`"apple苹果手机！！！"` → `"apple苹果手机"`
 - **分词处理**：使用动态词典进行分词，支持新词自动识别
-  - *示例*：`"苹果手机"` → `["苹果", "手机"]`
+  - *示例*：`"苹果手机"` → `["苹果", "手机"]`
 - **查询规范化**：去除括号内容、标准化输入格式
-  - *示例*：`"iPhone 15（Pro Max版本）"` → `"iPhone 15"`
+  - *示例*：`"iPhone 15（Pro Max版本）"` → `"iPhone 15"`
 
 ### **2. 查询理解阶段**
 - **命名实体识别**：识别品牌、类目、属性、标签等实体
-  - *示例*：`"苹果手机"` → 品牌:`"苹果"`, 类目:`"手机"`
+  - *示例*：`"苹果手机"` → 品牌:`"苹果"`, 类目:`"手机"`
 - **精准匹配**：直接匹配系统中已有的品牌和类目
-  - *示例*：`"华为"` → 精确匹配到品牌库中的`brandId: "huawei"`
+  - *示例*：`"华为"` → 精确匹配到品牌库中的`brandId: "huawei"`
 - **同义词扩展**：使用同义词库扩展未直接匹配的类目
-  - *示例*：`"笔记本"` → 扩展为`["笔记本电脑", "便携式电脑", "laptop"]`
+  - *示例*：`"笔记本"` → 扩展为`["笔记本电脑", "便携式电脑", "laptop"]`
 - **向量搜索扩展**：基于语义向量进行品牌和类目扩展
-  - *示例*：`"游戏本"` → 语义相似:`["电竞笔记本", "高性能笔记本"]`，相似度:`0.85`
+  - *示例*：`"游戏本"` → 语义相似:`["电竞笔记本", "高性能笔记本"]`，相似度:`0.85`
 
 ### **3. 评分与召回阶段**
 - **多因子联合评分**：综合考虑实体关系、用户偏好、平台热度
-  - *示例*：`"苹果手机"` → 品牌权重:`2.0` × 类目权重:`1.5` = 联合评分:`3.5`
+  - *示例*：`"苹果手机"` → 品牌权重:`2.0` × 类目权重:`1.5` = 联合评分:`3.5`
 - **得分归一化**：使用对数缩放等方法归一化不同维度的分数
-  - *示例*：销量`10000`件 → 归一化后:`0.85`分（0-1区间）
+  - *示例*：销量`10000`件 → 归一化后:`0.85`分（0-1区间）
 - **ES粗排召回**：使用BM25算法结合业务权重进行初步召回
-  - *示例*：BM25评分:`12.5` + 语义增强:`3.2` + 质量评分:`1.8` = 总分:`17.5`
+  - *示例*：BM25评分:`12.5` + 语义增强:`3.2` + 质量评分:`1.8` = 总分:`17.5`
 
 ### **4. 精排阶段**
 - **业务模型精排**：综合BM25、语义增强、商品质量等多维度评分
-  - *示例排序*：
-    - 商品A：ES评分`17.5` + 品牌加权`2.0` + 销量加权`1.2` = `20.7`分
-    - 商品B：ES评分`15.8` + 品牌加权`1.5` + 销量加权`2.8` = `20.1`分
-    - 最终排序：商品A > 商品B
+- **多级排序逻辑**：按优先级顺序比较，只有相等时才比较下一个维度
+  - *示例排序过程*（默认顺序：`first,OBB,SEM,PQ,VSL,PR`）：
+    - 商品A：ES评分`17.5`，品牌加权`2.0`，语义增强`3.2`
+    - 商品B：ES评分`17.5`，品牌加权`1.5`，语义增强`3.8`
+    - **第1级比较**：ES评分相等(17.5) → 继续下一级
+    - **第2级比较**：品牌加权A(2.0) > B(1.5) → **商品A排在前面**
+    - 注意：即使商品B的语义增强更高，由于品牌加权已经决出胜负，不再比较后续维度
 - **分页返回**：根据用户需求返回相应页码的结果
-  - *示例*：用户请求第2页，每页20条 → 返回第21-40条结果
+  - *示例*：用户请求第2页，每页20条 → 返回第21-40条结果
 
 ### **关键组件**
 - **Elasticsearch**：核心搜索引擎，负责倒排索引和BM25评分
-  - *作用*：存储商品索引，执行全文搜索，返回相关性评分
+  - *作用*：存储商品索引，执行全文搜索，返回相关性评分
 - **Prisma ORM**：数据库操作，管理商品、品牌、类目等基础数据
-  - *作用*：查询品牌信息、类目层级、商品属性等结构化数据
+  - *作用*：查询品牌信息、类目层级、商品属性等结构化数据
 - **缓存系统**：多层缓存优化性能（搜索缓存、排序缓存、实体缓存）
-  - *示例*：热门搜索`"iPhone"`结果缓存5分钟，避免重复计算
+  - *示例*：热门搜索`"iPhone"`结果缓存5分钟，避免重复计算
 - **日志系统**：完整的搜索日志记录和性能监控
-  - *记录内容*：搜索词、响应时间、召回数量、点击率等指标
+  - *记录内容*：搜索词、响应时间、召回数量、点击率等指标
 
 ### 💡 **完整搜索示例流程**
 
@@ -62,7 +65,7 @@
 1. **预处理**: `"华为笔记本电脑"` → `["华为", "笔记本电脑"]`
 2. **实体识别**: 品牌=`"华为"`, 类目=`"笔记本电脑"`
 3. **评分计算**: 品牌匹配度`2.0` + 类目匹配度`1.5` + BM25评分`8.3`
-4. **召回结果**: 300件相关商品（K倍窗口扩展）
+4. **召回结果**: 300件相关商品（动态缓存扩展）
 5. **精排输出**: 按综合评分排序，返回前20件商品
 6. **响应时间**: 总耗时`120ms`（ES查询`80ms` + 业务逻辑`40ms`）
 
@@ -94,8 +97,8 @@ return total * weight;
 **计算公式**：
 ```painless
 total = brand_score * brand_weight + 
-        catF_score * category_weight + 
-        catR_score * category_weight
+        catF_score * category_weight + 
+        catR_score * category_weight
 ```
 
 ### **3. 商品质量评分 (ProductQuality)**
@@ -142,24 +145,27 @@ formalWeight.vender + formalWeight.categoryFront + formalWeight.categoryRaw
 ### **1. Function Score查询**
 ```typescript
 {
-  function_score: {
-    query: { /* BM25基础查询 */ },
-    functions: [
-      { script_score: { script: semanticEnhancementScript } },
-      { script_score: { script: originalBrandBoostScript } },
-      { script_score: { script: productQualityScoreScript } },
-      { script_score: { script: titleBM25NormalizerScript } },
-      { script_score: { script: businessWeightScript } }
-    ],
-    score_mode: "sum",     // 评分合并方式：相加
-    boost_mode: "replace"  // 替换原始BM25评分
-  }
+  function_score: {
+    query: { /* BM25基础查询 */ },
+    functions: [
+      { script_score: { script: semanticEnhancementScript } },
+      { script_score: { script: originalBrandBoostScript } },
+      { script_score: { script: productQualityScoreScript } },
+      { script_score: { script: titleBM25NormalizerScript } },
+      { script_score: { script: businessWeightScript } }
+    ],
+    score_mode: "sum",     // 评分合并方式：相加
+    boost_mode: "replace"  // 替换原始BM25评分
+  }
 }
 ```
 
 ### **2. 粗排召回策略**
-- **召回窗口**：使用K倍扩展窗口（默认K=30）
-- **分页优化**：`from: (page-1) * size * K`，`size: pageSize * K`
+- **动态缓存扩展**：基于当前缓存状态和分页需求动态扩展召回数量
+  - 缓存充足时：直接使用缓存结果，无需额外查询
+  - 缓存不足时：计算扩展数量 `expandSize = max(需求数量 - 当前缓存, 0)`
+  - 最大限制：单次查询不超过10000条，避免性能问题
+- **分页计算**：`paginationEnd = max(from + size, esRecallSize)`
 - **过滤条件**：品牌、类目、价格、库存等业务过滤
 
 ### **3. SPU/SKU处理**
@@ -179,12 +185,12 @@ formalWeight.vender + formalWeight.categoryFront + formalWeight.categoryRaw
 ### **1. 排序器架构**
 ```typescript
 const sorterMap = {
-  first: byScore(),           // ES评分排序
-  OBB: byOriginalBrandBoost(), // 品牌提升排序
-  SEM: bySemanticEnhancement(), // 语义增强排序
-  PQ: byProductQuality(),      // 商品质量排序
-  VSL: byVenderStarLevel(),    // 供应商星级排序
-  PR: byPremium()             // 优质标签排序
+  first: byScore(),           // ES评分排序
+  OBB: byOriginalBrandBoost(), // 品牌提升排序
+  SEM: bySemanticEnhancement(), // 语义增强排序
+  PQ: byProductQuality(),      // 商品质量排序
+  VSL: byVenderStarLevel(),    // 供应商星级排序
+  PR: byPremium()             // 优质标签排序
 }
 ```
 
@@ -199,29 +205,41 @@ const sorterMap = {
 
 ### **3. 多级排序逻辑**
 ```typescript
+// 多级排序核心逻辑：按优先级逐级比较，只有相等才比较下一级
+const createSorter = (comparators) => {
+  return (a, b) => {
+    const [current, ...rest] = comparators;
+    if (!current) return 0;
+    
+    const result = current(a, b);
+    // 关键：只有当前维度相等(result === 0)时，才比较下一个维度
+    return result !== 0 ? result : createSorter(rest)(a, b);
+  };
+};
+
 function sorter(sortType, products, sorterOrder) {
-  const order = sorterOrder.split(',');
-  const comparators = order.map(key => sorterMap[key]);
-  
-  return products.sort((a, b) => {
-    for (const comparator of comparators) {
-      const result = comparator(a, b);
-      if (result !== 0) return result;
-    }
-    return 0;
-  });
+  const order = sorterOrder.split(','); // ["first", "OBB", "SEM", "PQ", "VSL", "PR"]
+  const comparators = order.map(key => sorterMap[key]);
+  
+  return products.sort(createSorter(comparators));
 }
 ```
+
+**排序优先级说明**：
+- **第1优先级**：ES综合评分 (`first`)
+- **第2优先级**：品牌店铺权重 (`OBB`) - 只有ES评分相同时才比较
+- **第3优先级**：语义匹配度 (`SEM`) - 只有前两项都相同时才比较
+- **后续优先级**：依此类推...
 
 ### **4. 分组排序策略**
 ```typescript
 // 货架式排序：先按品牌分组，组内按质量排序
 function divideGroup(list, compareFn, groupSize) {
-  const groups = [];
-  for (let i = 0; i < list.length; i += groupSize) {
-    groups.push(list.slice(i, i + groupSize));
-  }
-  return groups.map(group => group.sort(compareFn));
+  const groups = [];
+  for (let i = 0; i < list.length; i += groupSize) {
+    groups.push(list.slice(i, i + groupSize));
+  }
+  return groups.map(group => group.sort(compareFn));
 }
 ```
 
@@ -235,9 +253,9 @@ function divideGroup(list, compareFn, groupSize) {
 
 #### **语义增强权重**
 ```typescript
-semanticEnhancementScriptBrandWeight: 2.0      // 品牌匹配权重
-semanticEnhancementScriptCategoryWeight: 1.5   // 类目匹配权重  
-semanticEnhancementScriptResultWeight: 5.0     // 语义增强总权重
+semanticEnhancementScriptBrandWeight: 2.0      // 品牌匹配权重
+semanticEnhancementScriptCategoryWeight: 1.5   // 类目匹配权重  
+semanticEnhancementScriptResultWeight: 5.0     // 语义增强总权重
 ```
 **调整建议**：
 - 品牌导向平台：提高`brandWeight`到3.0
@@ -246,11 +264,11 @@ semanticEnhancementScriptResultWeight: 5.0     // 语义增强总权重
 
 #### **其他脚本权重**
 ```typescript
-titleBM25NormalizerScriptResultWeight: 5.0     // 标题BM25权重
-originalBrandBoostScriptResultWeight: 1.0      // 品牌店铺权重
-productQualityScoreScriptResultWeight: 1.0     // 商品质量权重
-productQualityCoefficient: 1.0                 // 质量系数
-categoryCoefficient: 1.0                       // 类目系数
+titleBM25NormalizerScriptResultWeight: 5.0     // 标题BM25权重
+originalBrandBoostScriptResultWeight: 1.0      // 品牌店铺权重
+productQualityScoreScriptResultWeight: 1.0     // 商品质量权重
+productQualityCoefficient: 1.0                 // 质量系数
+categoryCoefficient: 1.0                       // 类目系数
 ```
 
 ### **2. 归一化参数 (Normalization Parameters)**
@@ -259,7 +277,7 @@ categoryCoefficient: 1.0                       // 类目系数
 ```typescript
 // 标题BM25归一化
 titleBM25Normalizer: { xmax: 100, k: 10 }
-// 语义增强归一化  
+// 语义增强归一化  
 semanticEnhancement: { xmax: 50, k: 5 }
 // 商品质量归一化
 productQualityScore: { xmax: 1000, k: 100 }
@@ -278,9 +296,25 @@ productQualityScore: { xmax: 1000, k: 100 }
 ### **3. 召回配置 (Recall Configuration)**
 
 ```typescript
-esRecallSize: 300                          // ES召回窗口大小
-cardinalityPrecisionThreshold: 40000       // 基数统计精度阈值
-sorterOrder: "first,OBB,SEM,PQ,VSL,PR"    // 排序优先级
+esRecallSize: 300                          // ES召回窗口大小
+cardinalityPrecisionThreshold: 40000       // 基数统计精度阈值
+sorterOrder: "first,OBB,SEM,PQ,VSL,PR"    // 排序优先级
+```
+
+**动态缓存扩展机制**：
+```typescript
+// 核心逻辑：基于当前缓存和分页需求动态计算扩展
+const currentSize = cache?.products?.length || 0;
+const paginationEnd = Math.max(from + size, esRecallSize);
+const expandSize = Math.max(Math.min(Math.max(paginationEnd - currentSize, 0), 10000 - currentSize), 0);
+
+// 缓存命中条件
+if (currentSize >= paginationEnd && useCache) {
+  return cache; // 直接使用缓存
+} else {
+  // 增量查询：from = currentSize, size = expandSize
+  expandPagination = { from: Math.min(currentSize, 10000), size: expandSize };
+}
 ```
 
 **调整指南**：
@@ -296,7 +330,7 @@ sorterOrder: "first,OBB,SEM,PQ,VSL,PR"    // 排序优先级
 ```sql
 -- 品牌权重调整
 UPDATE Brand SET testValue = 2.0 WHERE brandId = 'target_brand';
--- 类目权重调整  
+-- 类目权重调整  
 UPDATE CategoryFront SET testValue = 1.5 WHERE categoryId = 'target_category';
 -- 商品权重调整
 UPDATE Product SET testWeight_product = 1.8 WHERE productId = 'target_product';
@@ -312,34 +346,49 @@ UPDATE Product SET testWeight_product = 1.8 WHERE productId = 'target_product';
 
 #### **缓存设置**
 ```typescript
-searchCache: TTL 5分钟      // 搜索结果缓存
-sortCache: TTL 10分钟       // 排序结果缓存  
-esCache: TTL 1分钟          // ES查询缓存
+searchCache: TTL 5分钟      // 搜索结果缓存
+sortCache: TTL 10分钟       // 排序结果缓存  
+esCache: TTL 1分钟          // ES查询缓存
 ```
 
 #### **分页优化**
 ```typescript
 // 大分页优化
 if (page > 100) {
-  useScrollSearch = true;
-  scrollTTL = "5m";
+  useScrollSearch = true;
+  scrollTTL = "5m";
 }
 ```
 
-### **6. 测试调整示例**
+### **6. A/B测试建议**
 
 #### **权重对比测试**
 ```typescript
 // 测试组配置
 const testConfig = {
-  semanticEnhancementWeight: 3.0,  // vs 基线5.0
-  brandBoostWeight: 2.0,           // vs 基线1.0
-  qualityWeight: 0.5               // vs 基线1.0
+  semanticEnhancementWeight: 3.0,  // vs 基线5.0
+  brandBoostWeight: 2.0,           // vs 基线1.0
+  qualityWeight: 0.5               // vs 基线1.0
 };
 ```
 
 #### **排序策略测试**
 - **策略A**：`"first,SEM,OBB,PQ,VSL,PR"` (语义优先)
-- **策略B**：`"first,PQ,OBB,SEM,VSL,PR"` (销量优先)  
+- **策略B**：`"first,PQ,OBB,SEM,VSL,PR"` (销量优先)  
 - **策略C**：`"first,OBB,SEM,PQ,VSL,PR"` (品牌优先)
 
+#### **监控指标**
+- **点击率 (CTR)**：结果页面点击率
+- **转化率 (CVR)**：搜索到购买的转化率
+- **搜索成功率**：有结果的搜索占比
+- **用户满意度**：通过用户反馈收集
+
+---
+
+### 💡 **调优最佳实践**
+
+1. **渐进式调整**：每次只调整一个参数，观察效果
+2. **数据驱动**：基于搜索日志和用户行为数据调整
+3. **AB测试**：对比不同配置的业务指标
+4. **定期评估**：根据商品和用户变化定期调整权重
+5. **监控告警**：设置搜索质量监控和异常告警
