--- a/搜索技术培训材料.md
+++ b/搜索技术培训材料.md
@@ -233,7 +233,7 @@ function sorter(sortType, products, sorterOrder) {
 
 ### **4. 分组排序策略**
 ```typescript
-// 货架式排序：先按品牌分组，组内按质量排序
+// 货架式排序：先分组，组内按排序器配置排序
 function divideGroup(list, compareFn, groupSize) {
   const groups = [];
   for (let i = 0; i < list.length; i += groupSize) {
