--- a/搜索技术培训材料.md
+++ b/搜索技术培训材料.md
@@ -15,8 +15,8 @@
   - *示例*：`"apple苹果手机！！！"` → `"apple苹果手机"`
 - **分词处理**：使用动态词典进行分词，支持新词自动识别
   - *示例*：`"苹果手机"` → `["苹果", "手机"]`
-- **查询规范化**：去除括号内容、标准化输入格式
-  - *示例*：`"iPhone 15（Pro Max版本）"` → `"iPhone 15"`
+<!-- - **查询规范化**：去除括号内容、标准化输入格式
+  - *示例*：`"iPhone 15（Pro Max版本）"` → `"iPhone 15"` -->
 
 ### **2. 查询理解阶段**
 - **命名实体识别**：识别品牌、类目、属性、标签等实体
